--- a/Front/NewProject.html
+++ b/Front/NewProject.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html ng-app="monApp">
 
   <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Create a new project</title>
 
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -18,13 +20,16 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 <link rel="stylesheet" href="css/mycss.css" />
+
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<script src="monAngular.js"></script>
   
 </head>
 
 
   <body>
 
-    
+    <div ng-controller="monController">
 
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
@@ -42,7 +47,7 @@
           <ul class="navbar-nav nav">
 
             <li class='active' >
-              <a href="/TeamGHB/">Accueil</a>
+              <a href="Index.html">Accueil</a>
             </li>
 
             <li >
@@ -59,14 +64,9 @@
 
         <form class="form-inline">
           <div class="form-group">
-            <label for="email">UserName:</label>
-            <input type="email" class="form-control" id="email">
+            <h4>{{userName}}</h4>
           </div>
-          <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input type="password" class="form-control" id="pwd">
-          </div>
-          <button type="submit" class="btn btn-default">Connect</button>
+          <button type="submit" class="btn btn-default">Log out</button>
         </form> 
       </ul>
 </div>
@@ -78,32 +78,11 @@
 </br></br>
 
 
-<div class="container" align="Center">
-   <form>
-      <h2>Inscription form:</h2>
-      <div class="form-group">
-        <label for="email">User Name:</label>
-        <input size="15" type="email"  placeholder="Enter UserName" class="form-control" id="email" >
-      </div>
-
-      <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" placeholder="Enter Password" class="form-control" id="pwd">
-      </div>
-
-      <div class="form-group">
-        <label for="pwd">Repeat Password:</label>
-        <input type="password" placeholder="Repeat Password" class="form-control" id="pwd">
-      </div>
-
-      <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-
-      <button type="submit" class="btn btn-default">Sign up</button>
-      <button type="submit" class="btn btn-default">Cancel</button>
-  </form> 
-
+    <div class="container" align="Center">
+      <h2>Create new project:</h2>
     </div>
 
+  </div>
   </body>
 
     <footer>
