--- a/Front/ListProject.html
+++ b/Front/ListProject.html
@@ -39,7 +39,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-          <a class="navbar-brand" href="http://www.reveillere.fr"><i class="fa fa-home" aria-hidden="true"></i></a>
+          <a class="navbar-brand"><i class="fa fa-home" aria-hidden="true"></i></a>
           <a class="navbar-brand">Team GGHB</a>
         </div>
         <div class="navbar-collapse collapse">
