Changement des noms des champs

--- a/Front/Index.html
+++ b/Front/Index.html
@@ -64,12 +64,12 @@
 
         <form class="form-inline">
           <div class="form-group">
-            <label for="email">UserName:</label>
-            <input type="email" placeholder="Enter your UserName" class="form-control" id="email">
+            <label for="username">UserName:</label>
+            <input type="username" placeholder="Enter your UserName" class="form-control" id="username">
           </div>
           <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input type="password" placeholder="Enter your password" class="form-control" id="pwd">
+            <label for="password">Password:</label>
+            <input type="password" placeholder="Enter your password" class="form-control" id="password">
           </div>
           <button type="submit" class="btn btn-default">Connect</button>
         </form> 
@@ -88,17 +88,17 @@
       <h2>Create an account</h2>
       <div class="form-group">
         <label for="UserName">User Name:</label>
-        <input type="UserName" placeholder="Enter UserName" class="form-control" id="UserName">
+        <input type="username" placeholder="Enter UserName" class="form-control" id="username">
       </div>
 
       <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" placeholder="Enter Password" class="form-control" id="pwd">
+        <label for="password">Password:</label>
+        <input type="password" placeholder="Enter Password" class="form-control" id="password">
       </div>
 
       <div class="form-group">
-        <label for="pwd">Repeat Password:</label>
-        <input type="password" placeholder="Repeat Password" class="form-control" id="pwd">
+        <label for="confirmPassword">Repeat Password:</label>
+        <input type="password" placeholder="Repeat Password" class="form-control" id="confirmPassword">
       </div>
 
       <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
