--- a/Front/ListProjects.html
+++ b/Front/ListProjects.html
@@ -1,5 +1,21 @@
+<br/><br/><br/>
+<br/><br/><br/>
+<br/><br/>
+
     <div class="container" align="Center">
     <!--button type="button" class="btn btn-secondary" align="Center" href="createProject.html">Create a new project</button-->
+
+    <table class="table table-bordered">
+   <thead class="thead-dark">
+     <tr>
+       <th scope="col">#</th>
+       <th scope="col">Name</th>
+       <th scope="col">Description</th>
+
+     </tr>
+   </thead>
+   </table>
+
     <a align="Center" href="createProject.html">Create a new project</a>
     
      <br/>
