--- a/Front/home.html
+++ b/Front/home.html
@@ -1,10 +1,11 @@
 <br/><br/><br/>
 <br/><br/><br/>
 <br/><br/>
-
+<form class="signUp" action="/index" method="POST">
 <div class="container" align="Center">
-  <form class="cproject" action="/index" method="POST">
+  
     <br/><br/><br/>
+    
       <h2>Create an account</h2>
       <div class="form-group">
         <label for="UserName">User Name:</label>
@@ -25,8 +26,5 @@
 
       <button ng-click="register()" type="submit" class="btn btn-default">Sign up</button>
       <button type="reset" class="btn btn-default">Reset</button>
-  </form> 
 </div>
-
-
-</div>
+</form>
