--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
   <script src="singlePage.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <!-- define angular controller -->
 <body ng-controller="mainController">
-
+  
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -43,7 +44,7 @@
             </li>
 
             <li >
-              <a href="#about ">About</a>
+              <a href="#about">About</a>
             </li>
 
         </ul>
@@ -71,7 +72,6 @@
     <!-- angular templating -->
     <!-- this is where content will be injected -->
     <div ng-view></div>
-    
   </div>
   
   <footer class="text-center">
