erreur css + erreur f/Front

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -5,10 +5,11 @@
 
 <head>
   <!-- SCROLLS -->
+  <link rel="stylesheet" href="./css/mycss.css" />
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 
-<link rel="stylesheet" href="Front/css/mycss.css" />
+
 
   <!-- SPELLS -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
