--- a/src/front/html_templates/createProject.html
+++ b/src/front/html_templates/createProject.html
@@ -6,11 +6,11 @@
  <form class="cproject" action="/createProject" method="POST">
   <div class="form-group">
     <label for="projectName">Name</label>
-    <input type="text" class="form-control" name="name" placeholder="Enter the name of project">
+    <input type="text" class="form-control" name="name" placeholder="Enter the name of project" required>
   </div>
   <div class="form-group">
     <label for="ProjectDescription">Description</label>
-    <textarea class="form-control" name="description"  rows="3" placeholder="Enter a short desciption of your project"></textarea>
+    <textarea class="form-control" name="description"  rows="3" placeholder="Enter a short desciption of your project" required></textarea>
   </div>
       <button type="submit" class="btn btn-default"> Save</button>
     <button type="reset" class="btn btn-default">Reset</button>
