--- a/src/front/html_templates/home.html
+++ b/src/front/html_templates/home.html
@@ -1,7 +1,7 @@
 <br/><br/><br/>
 <br/><br/><br/>
 <br/><br/>
-<form class="signUp" action="/index" method="POST">
+<form class="signUp" action="/" method="POST">
 <div class="container" align="Center">
   
     <br/><br/><br/>
