--- a/src/front/index.html
+++ b/src/front/index.html
@@ -51,13 +51,13 @@
 
       <ul class="navbar-text navbar-right">
 
-        <form class="form-inline">
+        <form class="form-inline" action="/login" method="POST">
           <div class="form-group">
             <label>UserName:</label>
-            <input type="text" ng-model="username" placeholder="Enter your UserName" class="form-control" id="username_co">
+            <input type="text" ng-model="username" placeholder="Enter your UserName" class="form-control" name="username_co">
 
             <label>Password:</label>
-            <input type="password" ng-model="password" placeholder="Enter your password" class="form-control" id="password_co">
+            <input type="password" ng-model="password" placeholder="Enter your password" class="form-control" name="password_co">
           
           <button ng-click="login()" type="submit" class="btn btn-default">Sign In</button>
           </div>
