--- a/GGHB/src/index.html
+++ b/GGHB/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GGHB</title>
+  <title>Team GGHB</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,4 +11,6 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="server.js"></script>
+
 </html>
